# DesafioJunior-backend

./: .env  .env.dev  .env.heroku  .env.local  .gitignore  Globals.py  Makefile  Messages.py  README.md  config.py  error.py  file.py  pyproject.toml  requirements.txt  run.py  specs_main.py
application/: __init__.py  app.py  database.py
migrations/versions/: 0a70f4b317e3_.py  4a91af90912a_.py  ab3b2b07769f_.py  c1c9eb9bffc4_.py
migrations_BKP/: env.py
migrations_BKP/versions/: 45c88c501125_.py  ab3b2b07769f_.py
source/controller/: __init__.py  acessoController.py  authenticationController.py  enderecoController.py  loginController.py  usuarioController.py
source/model/: __init__.py  acessoTable.py  controllerTable.py  enderecoTable.py  estadoTable.py  loginTable.py  municipioTable.py  paisTable.py  regraTable.py  usuarioTable.py
tests/: __init__.py  conftest.py  testLoginController.py  testUsuarioController.py
utils/: db_test_index.py  out.json  out.txt  swagger.json
utils/db/: db_cidade_estado_populate.py  db_populate_logins.py  start.sql
