[tool.poetry]
name = "desafiojunior"
version = "0.1.0"
description = "Desafio proposto para nivel junior PontoTel"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
gunicorn = "*"
Flask-JWT = "*"
SQLAlchemy = "*"
psycopg2 = "*"
python-dotenv = "*"
pydentic = "*"
validate-docbr = "*"
Flask-SQLAlchemy = "*"
Flask-Migrate = "*"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
